--- a/PSShiWuKu/package.json
+++ b/PSShiWuKu/package.json
@@ -10,6 +10,7 @@
 		"antd-mobile": "^1.6.3",
 		"react": "16.0.0-alpha.12",
 		"react-native": "0.47.1",
+		"react-native-device-info": "^0.12.1",
 		"react-native-scrollable-tab-view": "^0.6.7",
 		"react-navigation": "^1.0.0-beta.11"
 	},
