--- a/PSShiWuKu/android/settings.gradle
+++ b/PSShiWuKu/android/settings.gradle
@@ -3,3 +3,6 @@ rootProject.name = 'PSShiWuKu'
 include ':app'
 include ':react-native-device-info'
 project(':react-native-device-info').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-device-info/android')
+
+include ':RCTHttpCache'
+project(':RCTHttpCache').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-http-cache/android')
