--- a/PSShiWuKu/package.json
+++ b/PSShiWuKu/package.json
@@ -11,6 +11,7 @@
 		"react": "16.0.0-alpha.12",
 		"react-native": "0.47.1",
 		"react-native-device-info": "^0.12.1",
+		"react-native-http-cache": "^0.2.0",
 		"react-native-scrollable-tab-view": "^0.6.7",
 		"react-navigation": "^1.0.0-beta.11"
 	},
